<resources>
    <string name="app_name">Potato Store</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="go_back">Go back</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="phone_num_or_mail">Please enter your email\nor phone number to continue.</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="enter_code">Enter Code</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="background_image">Background image</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="profile_picture">Profile picture</string>
    <string name="update_info">Update profile</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="exit_app">Exit</string>
    <string name="display_name">Display Name</string>
    <string name="upload_image">Upload image</string>
    <string name="update">Update</string>
    <string name="click_to_upload_image">Click to upload image</string>
    <string name="close_dialog">Close dialog</string>
    <string name="account_information">Account information</string>
    <string name="avatar">Avatar</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="bio">Bio</string>
    <string name="contact_me">Contact me</string>
    <string name="nongnguyenthanh_0106_gmail_com">nongnguyenthanh.0106@gmail.com</string>
    <string name="_0346542636">0346542636</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="account">Account</string>
    <string name="add_product">Add product</string>
    <string name="product_id">Product ID</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="back">Back</string>
    <string name="day_of_birth">Day of birth</string>
    <string name="product_description">Product Description</string>
    <string name="product_image">Product Image</string>
    <string name="dollar">$</string>
    <string name="resend_otp_in">"Resend in "</string>
    <string name="s_second">s</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">LOGO</string>
    <string name="product">Product</string>
    <string name="contact">Contact</string>
    <string name="youtube">Youtube</string>
    <string name="setting">Setting</string>
    <string name="see_more_dot">See more...</string>
    <string name="subcribe">Subcribe</string>
    <string name="username">Username</string>
    <string name="please_enter_your_phone_number_to_continue">Please enter your phone number to continue.</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_comma">Phone Number,</string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="next">NEXT</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="miwth">Miwth</string>
    <string name="thanhdz_miwth_codes">thanhdz@miwth.codes</string>
    <string name="by_create_an_account_you_have_to_agree_with_our_term_amp_and_condication"><![CDATA[By create an account you have to agree with our term & and condication]]></string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="choose_a_new_profile_picture">Choose a new profile picture</string>
    <string name="click_on_the_image_to_change_it">Click on the image to change it</string>
    <string name="upload">Upload</string>
    <string name="successfully">Succesful!</string>
    <string name="you_have_successfully_registered">You have succesfully registered in our app. Thank you!</string>
    <string name="start_managing">Start</string>
    <string name="welcome">Welcome!</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="remember_me">Remember me</string>
    <string name="otp_login">OTP Login</string>
    <string name="google">Google</string>
    <string name="or_login_with">or login with:</string>
    <string name="delete">Delete</string>
    <string name="product_category">Product Category</string>
    <string name="gach">-</string>
    <string name="mail_me">Mail me</string>
    <string name="call_me">Call me</string>
    <string name="qty">Qty</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="menu_allcaps">MENU</string>
    <string name="voice_search">VOICE SEARCH</string>
    <string name="hello">"Hello, "</string>
    <string name="category_image">Category image</string>
    <string name="category_name">Category</string>
    <string name="show_categories">Show Categories</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="management">Management</string>
    <string name="category">Category</string>
    <string name="no_product_found">No Product Found</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="welcome_to_potato_store">Welcome to Potato Store.</string>
    <string name="add_product_category">Add Product Category</string>
    <string name="product_management">Product Management</string>
    <string name="all_products">All Products</string>
    <string name="enter_your_email_to_continue">Enter your email to continue</string>
    <string name="forgot_password">Forgot password?</string>
</resources>