<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:iconTint="@color/btn_login"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:iconTint="@color/btn_login"
        android:title="@string/logout" />

    <group android:checkableBehavior="single">
        <item android:title="@string/contact_me">
            <menu>
                <item
                    android:id="@+id/nav_admin"
                    android:color="@color/btn_login"
                    android:icon="@drawable/contact_filled"
                    android:title="@string/call_me" />
                <item
                    android:id="@+id/nav_email"
                    android:icon="@drawable/email_24"
                    android:iconTint="@color/btn_login"
                    android:title="@string/mail_me" />
            </menu>
        </item>
    </group>
</menu>