<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/product_home"
        android:icon="@drawable/product_management_icon_color_selector"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/category_menu"
        android:icon="@drawable/category_icon_color_selector"
        android:title="@string/category"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/product_management"
        android:icon="@drawable/add_product_icon_color_selector"
        android:title="@string/management"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account_management"
        android:icon="@drawable/account_icon_color_selector"
        android:title="@string/account"
        app:showAsAction="ifRoom" />

</menu>
