<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.PhoneLogin">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="64dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGoBack" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/phone_number_comma"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvWelcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/please_enter_your_phone_number_to_continue"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome2"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:inputType="phone"
        android:textSize="24sp"
        android:maxLength="10"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/baseline_perm_phone_msg_24"
        android:drawableTint="@color/dark_gray"
        android:hint="@string/phone_number" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/send_bg_enable"
        app:layout_constraintTop_toBottomOf="@id/edtPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send"
        android:textColor="@color/send_enable"
        android:textSize="24sp"
        app:cornerRadius="8dp" />

    <TextView
        android:id="@+id/tvEnterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />


    <EditText
        android:id="@+id/edtCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterOtp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_code"
        android:inputType="number"
        android:textSize="24sp"
        android:maxLength="6"
        android:enabled="false"
        android:drawableStart="@drawable/baseline_123_24"
        android:drawableTint="@color/dark_gray"
        android:drawablePadding="10dp"
        android:autofillHints="null" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/send_bg_disable"
        app:layout_constraintTop_toBottomOf="@id/edtCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verify"
        android:layout_marginTop="10dp"
        android:textColor="@color/send_disable"
        app:cornerRadius="8dp"
        android:textSize="24sp"
        android:clickable="false"
        android:enabled="false" />

    <ImageButton
        android:id="@+id/tvGoBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/go_back"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="@id/btnVerify"
        app:layout_constraintStart_toStartOf="@id/btnVerify"
        app:layout_constraintTop_toTopOf="@id/btnVerify"
        app:layout_constraintBottom_toBottomOf="@id/btnVerify"
        app:lottie_rawRes="@raw/eggs_loading_bar"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>