<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.UpdateAccountInfo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="center"
        android:src="@drawable/background_img" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/go_back"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/arrow_back_ios_new_24_white" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProductImg"
        android:layout_width="113dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/upload_image"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_file_upload_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/tvUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:text="@string/click_to_upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProductImg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/display_name"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUploadImage"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/day_of_birth"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintTop_toBottomOf="@id/tilDisplayName"
        app:startIconDrawable="@drawable/baseline_calendar_month_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/bio"
        app:counterEnabled="true"
        app:counterMaxLength="255"
        app:layout_constraintTop_toBottomOf="@id/tilDOB"
        app:startIconDrawable="@drawable/baseline_text_snippet_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            app:counterMaxLength="255" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_login"
        android:text="@string/update"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilBio" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_login_disabled"
        android:drawableLeft="@drawable/arrow_back_ios_new_24_white"
        android:text="@string/back"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUpdate"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>