<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".users.ChangeUserPictureActivity">

    <ImageButton
        android:id="@+id/tvGoBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/go_back"
        android:src="@drawable/baseline_arrow_back_ios_new_24" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginBottom="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/update_profile_picture"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/choose_a_new_profile_picture"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="200dp"
        android:layout_height="267dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/upload_img"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/click_on_the_image_to_change_it"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/send_bg_enable"
        android:text="@string/upload"
        android:textColor="@color/send_enable"
        android:textSize="22sp"
        app:cornerRadius="8dp" />

</LinearLayout>